# the-list-rs

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/sql/: 000-recreate-db.sql  001-create-schema.sql  002-dev-seed.sql
backend/src/: lib.rs
backend/src/_tests/: model_db.rs  model_list_element.rs
backend/src/model/: db.rs  element.rs  mod.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/app/: list.rs  mod.rs  window.rs
