[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Jon-Mycal Palmer"]


[dependencies]
thiserror = "1.0.33"
tokio = { version = "1", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
rusqlite = { version = "0.28.0", features = ["bundled"] }
r2d2_sqlite = "0.21.0"
diesel = { version = "2.0.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
r2d2 = "0.8.10"
fallible-iterator = "0.2.0"
